syntax = 'proto3';

package randomPackage;

service RandomServer {
  rpc PingPong(PingRequest) returns (PongResponse) {} // Server-Client Response
  rpc RandomNumbers(NumberRequest) returns (stream NumberResponse) {
  } // Server-Client Stream
  rpc TodoList(stream TodoRequest) returns (TodoResponse) {
  } // Client-Server Stream
}

message PingRequest { string message = 1; };
message PongResponse { string message = 1; };

message NumberRequest { int32 maxVal = 1; };
message NumberResponse { int32 number = 1; };

message TodoRequest {
  string todo = 1;
  string status = 2;
};

message TodoResponse { repeated TodoRequest todos = 1; }